[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/FeeCheckbox.gd" type="Script" id=1]
[ext_resource path="res://assets/font/SimpleFont.fnt" type="BitmapFont" id=2]
[ext_resource path="res://assets/ui/plus.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/minus.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/click.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="FeeCheckbox" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 52.0
margin_top = -4.0
margin_right = 140.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Custom 
text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountLabel" type="Label" parent="."]
margin_left = 11.0
margin_top = 2.5
margin_right = 29.0
margin_bottom = 14.5
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusButton" type="Button" parent="."]
margin_left = 30.5
margin_right = 39.5
margin_bottom = 14.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusButton" type="Button" parent="."]
margin_right = 9.0
margin_bottom = 14.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="button_down" from="PlusButton" to="." method="_on_PlusButton_button_down"]
[connection signal="button_down" from="MinusButton" to="." method="_on_MinusButton_button_down"]
